syntax = "proto3";

package inner.types;

import "google/protobuf/timestamp.proto";
import "outer/device_server.proto";
import "outer/platform.proto";

option go_package = "go-device-controller/types/protocol/generated/proto/inner/types";
option java_package = "com.dogu.protocol.generated.inner.types";

message Device {
  string device_id = 1;
  string serial = 2;
  string name = 3;
  outer.Platform platform = 4;
  string model = 5;
  optional string model_name = 6;
  string version = 7;
  sfixed32 is_global = 8;
  sfixed32 is_host = 9;
  outer.DeviceConnectionState connection_state = 10;
  google.protobuf.Timestamp heartbeat = 11;

  // relations
  string organization_id = 12;
  string host_id = 13;

  // timestamps
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;

  string manufacturer = 16;
  fixed32 resolution_width = 17;
  fixed32 resolution_height = 18;
}
